test_regress/t/t_flag_errorlimit_bad.out
%Error: t/t_flag_errorlimit_bad.v:10:8: Duplicate declaration of signal: 'u1'
   10 |    int u1;
      |        ^~
        t/t_flag_errorlimit_bad.v:9:8: ... Location of original declaration
    9 |    int u1;
      |        ^~
%Error: t/t_flag_errorlimit_bad.v:11:8: Duplicate declaration of signal: 'u1'
   11 |    int u1;
      |        ^~
        t/t_flag_errorlimit_bad.v:9:8: ... Location of original declaration
    9 |    int u1;
      |        ^~
%Error: Exiting due to
